- add transparency threshold to import pic background dialog - fix release build compile bug

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1459,7 +1459,7 @@ BEGIN
     DEFPUSHBUTTON   "&Accept",IDOK,347,276,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,406,276,50,14
     CONTROL         "",IDC_STATICORIG,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,7,209,125
-    ICON            IDI_ICONCONVERT,IDC_STATIC,222,60,21,20
+    ICON            IDI_ICONCONVERT,IDC_STATIC,222,60,20,20
     CONTROL         "",IDC_STATICPIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,243,10,213,117
     EDITTEXT        IDC_EDITSTATUS,7,139,449,14,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "Generate best palette",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,239,168,87,10
@@ -1476,19 +1476,21 @@ BEGIN
     RTEXT           "Color:",IDC_STATICTRANSLABEL,132,168,24,8
     EDITTEXT        IDC_EDITTRANSPARENTCOLOR,165,166,44,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Exclude from palette",IDC_CHECKDONTUSEINPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,136,179,72,21
-    CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,204,71,10
-    GROUPBOX        "Transparency",IDC_STATICGROUP3,124,154,96,65
+    CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,203,71,10
+    GROUPBOX        "Transparency",IDC_STATICGROUP3,124,154,96,81
     CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,241,235,89,30
     GROUPBOX        "Palette usage",IDC_STATICGROUP4,232,226,107,47
-    CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,227,82,10
-    CONTROL         "Dither",IDC_CHECKDITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,241,82,10
-    CONTROL         "Dither alpha",IDC_CHECKDITHERALPHA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,255,77,10
+    CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,238,82,10
+    CONTROL         "Dither",IDC_CHECKDITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,251,82,10
+    CONTROL         "Dither alpha",IDC_CHECKDITHERALPHA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,263,77,10
     CONTROL         "Insert at current position",IDC_CHECKINSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,241,278,95,10
     CONTROL         "",IDC_STATICPALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,347,158,109,89
     PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,7,276,50,14
     PUSHBUTTON      "From Clipboard",IDC_BUTTONCLIPBOARD,68,276,66,14
     PUSHBUTTON      "Refresh",IDC_BUTTONREFRESH,347,250,21,14,BS_ICON
     EDITTEXT        IDC_EDITRANGES,373,250,83,22,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITALPHATHRESHOLD,165,217,44,14,ES_AUTOHSCROLL | ES_NUMBER
+    CTEXT           "Alpha:",IDC_STATICALPHALABEL,133,220,24,8
 END
 
 IDD_PICHELPER DIALOGEX 0, 0, 130, 285
