- preliminary support for import image dialog for views

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1463,7 +1463,7 @@ BEGIN
     CONTROL         "",IDC_STATICPIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,243,10,213,117
     EDITTEXT        IDC_EDITSTATUS,7,139,449,14,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "Generate best palette",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,239,168,87,10
-    CONTROL         "Map to current pic palette",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,239,184,99,10
+    CONTROL         "Map to current palette",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,239,184,88,10
     CONTROL         "Use imported image palette",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,239,200,99,10
     GROUPBOX        "Palette generation",IDC_STATICGROUP2,232,154,110,65
     LTEXT           "Brightness:",IDC_STATIC1,22,173,40,8
@@ -1476,7 +1476,7 @@ BEGIN
     RTEXT           "Color:",IDC_STATICTRANSLABEL,132,168,24,8
     EDITTEXT        IDC_EDITTRANSPARENTCOLOR,165,166,44,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Exclude from palette",IDC_CHECKDONTUSEINPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,136,179,72,21
-    CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,203,71,10
+    CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,203,79,10
     GROUPBOX        "Transparency",IDC_STATICGROUP3,124,154,96,81
     CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,241,235,89,30
     GROUPBOX        "Palette usage",IDC_STATICGROUP4,232,226,107,47
