- support for EGA in the import images dialog

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -823,6 +823,7 @@
     <Image Include="res\rect_solid.ico" />
     <Image Include="res\refresh.ico" />
     <Image Include="res\Right.bmp" />
+    <Image Include="res\RightArrow.ico" />
     <Image Include="res\roundedrect.ico" />
     <Image Include="res\roundedrect_solid.ico" />
     <Image Include="res\SCICompanionDoc.ico" />
