- support for changing hue in import background dialog

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1036,7 +1036,7 @@ BEGIN
     LTEXT           "Choose a color:",IDC_DIALOGDESCRIPTION,7,7,115,11
 END
 
-IDD_BITMAPTOPIC DIALOGEX 0, 0, 463, 279
+IDD_BITMAPTOPIC DIALOGEX 0, 0, 463, 286
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Convert bitmap to pic"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -1044,13 +1044,13 @@ BEGIN
     GROUPBOX        "Conversion palette",IDC_STATICGROUP2,248,158,99,63
     EDITTEXT        IDC_EDITSTATUS,7,139,209,14,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "",IDC_PROGRESSCONVERT,"msctls_progress32",WS_BORDER,247,139,209,14
-    LTEXT           "Brightness:",IDC_STATIC1,22,173,40,8
-    CONTROL         "",IDC_SLIDERBRIGHTNESS,"msctls_trackbar32",0x0,22,182,172,12
-    LTEXT           "Contrast:",IDC_STATIC2,22,198,40,8
-    CONTROL         "",IDC_SLIDERCONTRAST,"msctls_trackbar32",WS_TABSTOP,22,207,172,12
-    LTEXT           "Saturation:",IDC_STATIC3,22,222,40,8
-    CONTROL         "",IDC_SLIDERSATURATION,"msctls_trackbar32",WS_TABSTOP,22,232,172,12
-    GROUPBOX        "Original",IDC_STATICGROUP1,7,158,209,93
+    LTEXT           "Brightness:",IDC_STATIC1,22,171,40,8
+    CONTROL         "",IDC_SLIDERBRIGHTNESS,"msctls_trackbar32",0x0,22,180,172,12
+    LTEXT           "Contrast:",IDC_STATIC2,22,194,40,8
+    CONTROL         "",IDC_SLIDERCONTRAST,"msctls_trackbar32",WS_TABSTOP,22,203,172,12
+    LTEXT           "Saturation:",IDC_STATIC3,22,216,40,8
+    CONTROL         "",IDC_SLIDERSATURATION,"msctls_trackbar32",WS_TABSTOP,22,226,172,12
+    GROUPBOX        "Original",IDC_STATICGROUP1,7,158,209,103
     CONTROL         "Half-tone",IDC_RADIOHALFTONE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,254,169,46,10
     CONTROL         "Solid colours",IDC_RADIOSOLID,"Button",BS_AUTORADIOBUTTON,254,182,55,10
     CONTROL         "Smooth half-tone",IDC_RADIOHALFTONESMOOTH,"Button",BS_AUTORADIOBUTTON,254,195,71,10
@@ -1065,14 +1065,16 @@ BEGIN
     CONTROL         "Weighted RGB",IDC_RADIO4,"Button",BS_AUTORADIOBUTTON,367,227,62,10
     CONTROL         "RGB/HSL mix",IDC_RADIO5,"Button",BS_AUTORADIOBUTTON,367,239,57,10
     GROUPBOX        "Color matching",IDC_STATICGROUP4,359,179,96,73
-    PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,7,258,50,14
-    PUSHBUTTON      "From Clipboard",IDC_BUTTONCLIPBOARD,68,258,66,14
-    PUSHBUTTON      "&Convert",IDC_BUTTONCONVERT,287,258,50,14
-    DEFPUSHBUTTON   "&Accept",IDOK,347,258,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,406,258,50,14
-    ICON            IDI_RIGHT_ARROW,IDC_STATICARROW,222,60,20,20
+    PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,7,265,50,14
+    PUSHBUTTON      "From Clipboard",IDC_BUTTONCLIPBOARD,68,265,66,14
+    PUSHBUTTON      "&Convert",IDC_BUTTONCONVERT,287,265,50,14
+    DEFPUSHBUTTON   "&Accept",IDOK,347,265,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,406,265,50,14
+    ICON            IDI_RIGHT_ARROW,IDC_STATICARROW,222,60,21,20
     CONTROL         "",IDC_STATICORIG,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,7,209,125
     CONTROL         "",IDC_STATICPIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,243,10,213,117
+    LTEXT           "Hue:",IDC_STATIC4,22,237,40,8
+    CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,246,172,12
 END
 
 IDD_GAMEPROPERTIESDIALOG DIALOGEX 0, 0, 213, 106
@@ -1473,7 +1475,7 @@ BEGIN
     CONTROL         "",IDC_SLIDERCONTRAST,"msctls_trackbar32",WS_TABSTOP,22,207,87,12
     LTEXT           "Saturation:",IDC_STATIC3,22,222,40,8
     CONTROL         "",IDC_SLIDERSATURATION,"msctls_trackbar32",WS_TABSTOP,22,232,87,12
-    GROUPBOX        "Original",IDC_STATICGROUP1,7,158,113,94
+    GROUPBOX        "Original",IDC_STATICGROUP1,7,158,113,113
     RTEXT           "Color:",IDC_STATICTRANSLABEL,132,168,24,8
     EDITTEXT        IDC_EDITTRANSPARENTCOLOR,165,166,44,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Exclude from palette",IDC_CHECKDONTUSEINPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,136,179,72,21
@@ -1492,6 +1494,8 @@ BEGIN
     EDITTEXT        IDC_EDITRANGES,373,250,83,22,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_EDITALPHATHRESHOLD,165,217,44,14,ES_AUTOHSCROLL | ES_NUMBER
     CTEXT           "Alpha:",IDC_STATICALPHALABEL,133,220,24,8
+    LTEXT           "Hue:",IDC_STATIC4,22,247,40,8
+    CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,257,87,12
 END
 
 IDD_PICHELPER DIALOGEX 0, 0, 130, 285
@@ -2013,7 +2017,7 @@ BEGIN
         VERTGUIDE, 232
         VERTGUIDE, 248
         TOPMARGIN, 7
-        BOTTOMMARGIN, 272
+        BOTTOMMARGIN, 279
         HORZGUIDE, 132
         HORZGUIDE, 139
         HORZGUIDE, 158
