- support for two types of color matching

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1481,8 +1481,8 @@ BEGIN
     CONTROL         "Exclude from palette",IDC_CHECKDONTUSEINPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,136,179,72,21
     CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,203,79,10
     GROUPBOX        "Transparency",IDC_STATICGROUP3,124,154,96,81
-    CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,241,235,89,30
-    GROUPBOX        "Palette usage",IDC_STATICGROUP4,232,226,107,47
+    CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,241,229,89,24
+    GROUPBOX        "Palette usage",IDC_STATICGROUP4,232,219,107,38
     CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,238,82,10
     CONTROL         "Dither",IDC_CHECKDITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,251,82,10
     CONTROL         "Dither alpha",IDC_CHECKDITHERALPHA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,263,77,10
@@ -1496,6 +1496,8 @@ BEGIN
     CTEXT           "Alpha:",IDC_STATICALPHALABEL,133,220,24,8
     LTEXT           "Hue:",IDC_STATIC4,22,247,40,8
     CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,257,87,12
+    COMBOBOX        IDC_COMBOMATCH,286,259,53,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Color match:",IDC_STATIC8,238,262,42,8
 END
 
 IDD_PICHELPER DIALOGEX 0, 0, 130, 285
@@ -2492,6 +2494,15 @@ BEGIN
 0x6142, 0x7272, 0x6465, "\000" 
     IDC_COMBOPOLYTYPE, 0x403, 10, 0
 0x6f43, 0x746e, 0x6961, 0x656e, 0x0064, 
+    0
+END
+
+IDD_BITMAPTOVGA DLGINIT
+BEGIN
+    IDC_COMBOMATCH, 0x403, 4, 0
+0x4752, 0x0042, 
+    IDC_COMBOMATCH, 0x403, 5, 0
+0x4343, 0x5249, "\000" 
     0
 END
 
