--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -614,6 +614,7 @@
     <None Include="Files\TemplateGame\SCI1.1\src\InvItem.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\InvItem.sco" />
     <None Include="Files\Objects\SCI1.1\Methods.sc" />
+    <None Include="Files\Objects\SCI0\Methods.sc" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
