- integrate nouns and cases into Message undo stack

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -233,6 +233,7 @@
     <ClCompile Include="Src\GIFLIB\egif_lib.cpp" />
     <ClCompile Include="Src\MFCDocuments\DocumentWithPaletteChoices.cpp" />
     <ClCompile Include="Src\r8brain\r8bbase.cpp" />
+    <ClCompile Include="Src\Resources\NounsAndCases.cpp" />
     <ClCompile Include="Src\Resources\Polygon.cpp" />
     <ClCompile Include="Src\FrameComponents\ViewCelListBox.cpp" />
     <ClCompile Include="Src\FrameComponents\ZoomCelStatic.cpp" />
@@ -296,6 +297,7 @@
     <ClInclude Include="Src\r8brain\r8bbase.h" />
     <ClInclude Include="Src\r8brain\r8bconf.h" />
     <ClInclude Include="Src\r8brain\r8butil.h" />
+    <ClInclude Include="Src\Resources\NounsAndCases.h" />
     <ClInclude Include="Src\Resources\Polygon.h" />
     <ClInclude Include="Src\FrameComponents\ViewCelListBox.h" />
     <ClInclude Include="Src\GIFLIB\gif_hash.h" />
