- support variants of dithering for alpha

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -698,7 +698,7 @@ IDR_MENUEGOS MENU
 BEGIN
     POPUP "Root item"
     BEGIN
-    MENUITEM "Enter resource number...", ID_FAKEEGONUMBER
+        MENUITEM "Enter resource number...",    ID_FAKEEGONUMBER
     END
 END
 
@@ -1493,7 +1493,6 @@ BEGIN
     GROUPBOX        "Palette usage",IDC_STATICGROUP4,232,219,107,38
     CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,238,82,10
     CONTROL         "Dither",IDC_CHECKDITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,251,82,10
-    CONTROL         "Dither alpha",IDC_CHECKDITHERALPHA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,263,77,10
     CONTROL         "Insert at current position",IDC_CHECKINSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,241,278,95,10
     CONTROL         "",IDC_STATICPALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,347,158,109,89
     PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,7,276,50,14
@@ -1506,6 +1505,8 @@ BEGIN
     CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,257,87,12
     COMBOBOX        IDC_COMBOMATCH,286,259,53,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Color match:",IDC_STATIC8,238,262,42,8
+    COMBOBOX        IDC_COMBODITHERALPHA,160,262,73,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Alpha:",IDC_STATICDITHERALPHA,135,264,22,8
 END
 
 IDD_PICHELPER DIALOGEX 0, 0, 130, 285
@@ -2511,6 +2512,15 @@ BEGIN
 0x4752, 0x0042, 
     IDC_COMBOMATCH, 0x403, 5, 0
 0x4343, 0x5249, "\000" 
+    IDC_COMBODITHERALPHA, 0x403, 10, 0
+0x6f4e, 0x6420, 0x7469, 0x6568, 0x0072, 
+    IDC_COMBODITHERALPHA, 0x403, 16, 0
+0x6c46, 0x796f, 0x2064, 0x7453, 0x6965, 0x626e, 0x7265, 0x0067, 
+    IDC_COMBODITHERALPHA, 0x403, 20, 0
+0x614a, 0x7672, 0x7369, 0x4a2f, 0x6475, 0x6369, 0x2f65, 0x694e, 0x6b6e, 
+0x0065, 
+    IDC_COMBODITHERALPHA, 0x403, 15, 0
+0x724f, 0x6564, 0x6572, 0x2064, 0x6964, 0x6874, 0x7265, "\000" 
     0
 END
 
