- support changing background of animate dialog

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -996,6 +996,7 @@ BEGIN
     CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,7,7,172,98
     CONTROL         "",IDC_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,7,110,172,15
     PUSHBUTTON      "Pause",IDC_BUTTONPLAY,7,130,48,13
+    PUSHBUTTON      "Background",IDC_BUTTONBG,64,130,56,13
 END
 
 IDD_DIALOGFINDALL DIALOGEX 0, 0, 241, 73
